solved stretch problem of slideshow in desktop

--- a/slideshow.css
+++ b/slideshow.css
@@ -4,19 +4,19 @@
 } */
 .slides {
     display: flex;
+    position: relative;
     margin: 0%;
     padding: 0%;
-    align-items: center;
     height: 60vh;
-    width: 100vw;
+    width: 100%;
+    max-width: 425px;
 }
 .slide {
     display: none;
+    position: relative;
     margin: 0%;
     padding: 0%;
-    position: relative;
-    max-height: 100%;
-    max-width: fit-content;
+    width: 100%;
 }
 .slide_number, .slide_caption {
     display: block;
@@ -38,8 +38,8 @@
     display: block;
     margin: 0%;
     padding: 0%;
-    max-height: 100%;
-    max-width: 100%;
+    height: auto;
+    width: 100%;
     border-radius: 2%;
 }
 .slide_buttons {
@@ -48,6 +48,7 @@
     margin: 0%;
     padding: 0%;
     justify-content: space-between;
+    align-self: center;
     width: 100%;
     max-height: 100%;
 }
@@ -55,7 +56,7 @@
     display: block;
     cursor: pointer;
     margin: 0%;
-    padding: 40% 2px;
+    padding: 10% 2px;
     color: #fa7f43;
     background-color: #5f90ad20;
     font-size: 20px;
